--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,27 +4,213 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+  <group android:scaleX="0.12330709"
+      android:scaleY="0.12330709"
+      android:translateX="22.68"
+      android:translateY="26.87244">
+    <path
+        android:pathData="M118,404L232,404A18,18 0,0 1,250 422L250,422A18,18 0,0 1,232 440L118,440A18,18 0,0 1,100 422L100,422A18,18 0,0 1,118 404z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="109"
+            android:startY="422"
+            android:endX="244"
+            android:endY="422"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF425F87"/>
+          <item android:offset="1" android:color="#FF13A3EE"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M19.5,171.5m-19.5,0a19.5,19.5 0,1 1,39 0a19.5,19.5 0,1 1,-39 0"
+        android:strokeAlpha="0.05"
+        android:fillAlpha="0.05">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="19.5"
+            android:startY="152"
+            android:endX="19.5"
+            android:endY="191"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M70,243m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
+        android:strokeAlpha="0.1"
+        android:fillAlpha="0.1">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="70"
+            android:startY="223"
+            android:endX="70"
+            android:endY="263"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M120.5,309.5m-20.5,0a20.5,20.5 0,1 1,41 0a20.5,20.5 0,1 1,-41 0"
+        android:strokeAlpha="0.15"
+        android:fillAlpha="0.15">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="120.5"
+            android:startY="289"
+            android:endX="120.5"
+            android:endY="330"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M171,380m-21,0a21,21 0,1 1,42 0a21,21 0,1 1,-42 0"
+        android:strokeAlpha="0.2"
+        android:fillAlpha="0.2">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="171"
+            android:startY="358.66"
+            android:endX="171"
+            android:endY="401.34"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M248.5,348.5m-21.5,0a21.5,21.5 0,1 1,43 0a21.5,21.5 0,1 1,-43 0"
+        android:strokeAlpha="0.25"
+        android:fillAlpha="0.25">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="248.5"
+            android:startY="327"
+            android:endX="248.5"
+            android:endY="370"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M332,296A22,22 0,1 1,310 318,22 22,0 0,1 332,296Z"
+        android:strokeAlpha="0.3"
+        android:fillAlpha="0.3">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="332"
+            android:startY="296"
+            android:endX="332"
+            android:endY="340"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M409.5,287.5m-22.5,0a22.5,22.5 0,1 1,45 0a22.5,22.5 0,1 1,-45 0"
+        android:strokeAlpha="0.35"
+        android:fillAlpha="0.35">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="409.5"
+            android:startY="265"
+            android:endX="409.5"
+            android:endY="310"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M485,259m-23,0a23,23 0,1 1,46 0a23,23 0,1 1,-46 0"
+        android:strokeAlpha="0.4"
+        android:fillAlpha="0.4">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="485"
+            android:startY="236"
+            android:endX="485"
+            android:endY="282"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M427.5,200.5m-23.5,0a23.5,23.5 0,1 1,47 0a23.5,23.5 0,1 1,-47 0"
+        android:strokeAlpha="0.45"
+        android:fillAlpha="0.45">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="427.5"
+            android:startY="177"
+            android:endX="427.5"
+            android:endY="224"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M373,146m-24,0a24,24 0,1 1,48 0a24,24 0,1 1,-48 0"
+        android:strokeAlpha="0.5"
+        android:fillAlpha="0.5">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="373"
+            android:startY="121.53"
+            android:endX="373"
+            android:endY="170.47"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M314.5,86.5m-24.5,0a24.5,24.5 0,1 1,49 0a24.5,24.5 0,1 1,-49 0"
+        android:strokeAlpha="0.55"
+        android:fillAlpha="0.55">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="314.5"
+            android:startY="62"
+            android:endX="314.5"
+            android:endY="111"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M252,25m-25,0a25,25 0,1 1,50 0a25,25 0,1 1,-50 0">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="252"
+            android:startY="-0"
+            android:endX="252"
+            android:endY="50"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFCCB4F0"/>
+          <item android:offset="1" android:color="#FFEBF5C3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
